Compiler/tests/bad/if4.nx
type t = [0 .. 10];

if(1)
{
    print(42);
}
else
{
    print(t);
}